Migrates to Playwright with Chromium
Updates the project template to use Playwright with Chromium
for improved browser automation and scraping capabilities.

Adds a postinstall script to automatically install Playwright
and its dependencies, ensuring a smoother setup process.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Scraper optimisé pour le catalogue Fruit of the Loom avec rotating residential proxy",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "postinstall": "npx playwright install --with-deps chromium"
   },
   "dependencies": {
     "apify": "^3.0.0",
