Adds Dockerfile for containerization
Adds a Dockerfile to containerize the application, simplifying deployment and ensuring consistent execution environments.

Removes the postinstall script that installed playwright browsers, as this is now handled by the base image in the Dockerfile.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Scraper optimisé pour le catalogue Fruit of the Loom avec rotating residential proxy",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
-    "postinstall": "npx playwright install --with-deps chromium"
+    "start": "node main.js"
   },
   "dependencies": {
     "apify": "^3.0.0",
