--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "apify": "^3.0.0",
     "crawlee": "^3.0.0",
-    "puppeteer": "^21.0.0"
+    "puppeteer-core": "^21.0.0"
   },
   "type": "module"
 }
